add: add twitter logic
